<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   > 
 <LinearLayout
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   >
    <TextView
     android:id="@+id/longitude"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:text="@string/longitude"
  />
  <TextView
   android:id="@+id/latitude"
   android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:text="@string/latitude"
  />
  <TextView
   android:id="@+id/altitude"
   android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:text="@string/altitude"
  />
 </LinearLayout>
 <org.openpilot.androidgcs.MyCustomMapView
  android:id="@+id/mapview"
  android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
  android:apiKey="098Goj3psJ2Vg_lGi2v0pRWf4mqxjBvh2FI4frg"
 />
</LinearLayout>
