<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/launch_object_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/browser_icon"
        android:text="@string/object_browser_name" />

    <Button
        android:id="@+id/launch_pfd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/launch_object_browser"
        android:layout_alignRight="@+id/launch_object_browser"
        android:layout_below="@+id/launch_object_browser"
        android:drawableLeft="@drawable/browser_icon"
        android:text="@string/pfd_name" >
    </Button>

    <Button
        android:id="@+id/launch_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/launch_object_browser"
        android:layout_alignRight="@+id/launch_object_browser"
        android:layout_below="@+id/launch_pfd"
        android:drawableLeft="@drawable/browser_icon"
        android:text="@string/location_name" >
    </Button>

</RelativeLayout>